--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{
-    color: red;
+    color: rgb(0, 0, 0);
 }
 
 body{
-    background-color:aquamarine;
+    background-color:rgb(162, 198, 52);
 }
